--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 absl-py==2.0.0
-altair==5.1.1
-asgiref==3.7.2
-asttokens==2.4.0
+altair==5.1.1    
+asgiref==3.7.2   
+asttokens==2.4.0 
 astunparse==1.6.3
 attrs==23.1.0
 backcall==0.2.0
@@ -42,7 +42,8 @@ jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 jupyter_client==8.3.1
 jupyter_core==5.3.2
-keras==2.13.1
+keras==2.14.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.4.4
@@ -51,15 +52,16 @@ MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+ml-dtypes==0.2.0
 mpmath==1.3.0
 nest-asyncio==1.5.8
-numpy==1.24.3
+numpy==1.26.0
 oauthlib==3.2.2
 onnx==1.14.1
 onnxruntime==1.16.0
 opencv-python==4.8.1.78
 opt-einsum==3.3.0
-packaging==23.1
+packaging==23.2
 pandas==2.1.1
 parso==0.8.3
 pickleshare==0.7.5
@@ -96,11 +98,11 @@ stack-data==0.6.2
 streamlit==1.27.0
 sympy==1.12
 tenacity==8.2.3
-tensorboard==2.13.0
+tensorboard==2.14.1
 tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-intel==2.14.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 tf-explain==0.3.1
@@ -118,5 +120,5 @@ validators==0.22.0
 watchdog==3.0.0
 wcwidth==0.2.6
 Werkzeug==2.3.7
-wrapt==1.15.0
+wrapt==1.14.1
 zipp==3.17.0
